--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,24 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "server/index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "Client/dist/**",
-        "use": "@vercel/static"
-      }
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/server/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/Client/dist/$1"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
-  }
-  
+}
