--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,24 +1,23 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server/index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "client/dist/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/server/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/client/dist/$1"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "server/index.js",  
+      "use": "@vercel/node"      
+    },
+    {
+      "src": "Client/dist/**",     
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",         
+      "dest": "/server/index.js"   
+    },
+    {
+      "src": "/(.*)",               
+      "dest": "/Client/dist/$1"
+    }
+  ]
+}
